# decklink-camera-control-extractor

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: commands.h  crc.h  decklink.h  defines.h  dlwrapper.h  mutexfifo.h  printpacket.h  serialoutput.h
src/: commands.cpp  commands.h  decklink.cpp  decklink.h  defines.h  dlwrapper.h  main.cpp  mutexfifo.h  printpacket.cpp  printpacket.h  serialoutput.cpp  serialoutput.h
telemetry_receiver/: I2CCustom.h  commands.cpp  esp32_defines.cpp  esp32_defines.h  receiver.cpp  receiver.h  runstate.h  sender.cpp  sender.h  telemetry_receiver.ino  uart.cpp  uart.h
